# example_mock_lidar

./: CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: devcontainer.json
examples/: mock_lidar_test.cpp
include/cpp_course/: IMap3D.h  LidarSensor.h  MockLidarSensor.h  PositionSensor.h  SimulationContext.h  SparseTextMap.h  Units.h  VoxelGrid.h
src/: MockLidarSensor.cpp  SimulationContext.cpp  SparseTextMap.cpp  VoxelGrid.cpp
tests/: MockLidarSensorTests.cpp  README.md  SimulationContextTests.cpp  SparseTextMapTests.cpp  TestHelpers.h  VoxelGridTests.cpp
